membuat form tambah guru

--- a/html/guru.html
+++ b/html/guru.html
@@ -237,12 +237,59 @@
             <p>Copyright &copy 20224 - Sistem Data Manajemen Paud</p>
         </div>
         <div class="modal-create-teacher">
-            <div class="modal-create-teacher-header">
-                <h1>Tambah untuk guru</h1>
-                <span>X</span>
-            </div>
-            <div class="modal-create-teacher-body"></div>
-            <div class="modal-create-teacher-footer"></div>
+            <div class="modal-create-teacher-content">
+                <div class="modal-create-teacher-content-header">
+                    <h1>Form Tambah Guru</h1>
+                    <span>X</span>
+                </div>
+                <div class="modal-create-teacher-body">
+                    <table class="create-teacher">
+                        <tr>
+                            <td>Nama Guru</td>
+                            <td>:</td>
+                            <td><input type="text"></td>
+                        </tr>
+                        <tr>
+                            <td>Tanggal lahir</td>
+                            <td>:</td>
+                            <td><input type="date"></td>
+                        </tr>
+                        <tr>
+                            <td>Jenis kelamin</td>
+                            <td></td>
+                            <td>
+                                <select name="" id="">
+                                    <option value="">Laki laki</option>
+                                    <option value="">Perempuan</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Alamat</td>
+                            <td>:</td>
+                            <td><input type="text"></td>
+                        </tr>
+                        <tr>
+                            <td>Nomor telepon</td>
+                            <td>:</td>
+                            <td><input type="text"></td>
+                        </tr>
+                        <tr>
+                            <td>Alamat email</td>
+                            <td>:</td>
+                            <td><input type="email" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <td>Tanggal mulai</td>
+                            <td>:</td>
+                            <td><input type="date" name="" id=""></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-create-teacher-footer">
+                    <button>Tambah</button>
+                </div>
+            </div>      
         </div>
     </div>
     <script src="../js/all.min.js"></script>
