--- a/html/siswa.html
+++ b/html/siswa.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/siswa.css">
     <link rel="stylesheet" href="../css/all.min.css">
+    <link rel="stylesheet" href="../css/responsive-siswa.css">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <title>SIDAMUD</title>
 </head>
@@ -55,13 +56,13 @@
                 <input type="text" placeholder="Cari / Search">
             </div>
             <div class="icons">
-                <div class="icons-content">
+                <div class="icons-content user">
                     <i class="fas fa-user"></i>
                 </div>
-                <div class="icons-content">
+                <div class="icons-content hamburger">
                     <i class="fas fa-solid fa-bars"></i>
                 </div>
-                <div class="icons-content">
+                <div class="icons-content pesan">
                     <i class="fa-solid fa-bell"></i>
                 </div>
             </div>
@@ -250,5 +251,6 @@
     </div>
     <script src="../js/all.min.js"></script>
     <script src="../js/siswa.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
