--- a/html/nilai.html
+++ b/html/nilai.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/nilai.css">
+    <link rel="stylesheet" href="../css/responsive-nilai.css">
     <link rel="stylesheet" href="../css/all.min.css">
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <title>SIDAMUD</title>
@@ -199,5 +200,6 @@
     </div>
     <script src="../js/all.min.js"></script>
     <script src="../js/nilai.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
