membuat modal tambah tugass

--- a/html/homepage-teacher.html
+++ b/html/homepage-teacher.html
@@ -114,7 +114,53 @@
                 </div>
             </div>
         </div>
-        <div class="content-body-footer"></div>
+        <div class="content-body-footer">
+            <div class="modal-create-tugas">
+                <div class="modal-create-tugas-content">
+                    <div class="modal-create-tugas-content-header">
+                        <h1>Tambah tugas Siswa</h1>
+                        <span>X</span>
+                    </div>
+                    <div class="modal-create-tugas-content-body">
+                        <div class="list-tugas">
+                            <div class="list-tugas-header">
+                                <h2>Judul tugas</h2>
+                            </div>
+                            <div class="list-tugas-body">
+                                <input type="text">
+                                <p><span>Kolom ini wajib di isi</span></p>
+                            </div>
+                        </div>
+                        <div class="list-tugas">
+                            <div class="list-tugas-header">
+                                <h2>Jenis tugas</h2>
+                            </div>
+                            <div class="list-tugas-body">
+                                <input type="text">
+                                <p><span>Kolom ini wajib di isi</span></p>
+                            </div>
+                        </div>
+                        <div class="list-tugas">
+                            <div class="list-tugas-header">
+                                <h2>Tenggat waktu</h2>
+                            </div>
+                            <div class="list-tugas-body">
+                                <input type="date">
+                                <p><span>Kolom ini wajib di isi</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-create-tugas-content-footer"></div>
+                </div>
+            </div>
+            <div class="modal-create-materi">
+                <div class="modal-create-materi-content">
+                    <div class="modal-create-materi-content-header"></div>
+                    <div class="modal-create-materi-content-body"></div>
+                    <div class="modal-create-materi-content-footer"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="content-footer"></div>
     <script src="../js/all.min.js"></script>
