style modal create tugas

--- a/html/homepage-teacher.html
+++ b/html/homepage-teacher.html
@@ -150,7 +150,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal-create-tugas-content-footer"></div>
+                    <div class="modal-create-tugas-content-footer">
+                        <button>Tambah Tugas</button>
+                    </div>
                 </div>
             </div>
             <div class="modal-create-materi">
