masih desain modal create tugas

--- a/html/homepage-teacher.html
+++ b/html/homepage-teacher.html
@@ -122,11 +122,11 @@
                         <span>X</span>
                     </div>
                     <div class="modal-create-tugas-content-body">
-                        <div class="list-tugas">
+                        <div class="list-tugas">        
                             <div class="list-tugas-header">
                                 <h2>Judul tugas</h2>
                             </div>
-                            <div class="list-tugas-body">
+                            <div class="list-tugas-body judul-tugas">
                                 <input type="text">
                                 <p><span>Kolom ini wajib di isi</span></p>
                             </div>
@@ -135,8 +135,11 @@
                             <div class="list-tugas-header">
                                 <h2>Jenis tugas</h2>
                             </div>
-                            <div class="list-tugas-body">
-                                <input type="text">
+                            <div class="list-tugas-body jenis-tugas">
+                                <select name="jenis" id="">
+                                    <option value=" essai">Essai</option>
+                                    <option value="ganda">Pilihan ganda</option>
+                                </select>
                                 <p><span>Kolom ini wajib di isi</span></p>
                             </div>
                         </div>
@@ -144,7 +147,7 @@
                             <div class="list-tugas-header">
                                 <h2>Tenggat waktu</h2>
                             </div>
-                            <div class="list-tugas-body">
+                            <div class="list-tugas-body tenggat-waktu">
                                 <input type="date">
                                 <p><span>Kolom ini wajib di isi</span></p>
                             </div>
