membuat modal tambah essai

--- a/html/homepage-teacher.html
+++ b/html/homepage-teacher.html
@@ -67,7 +67,7 @@
                             <tr>
                                 <td>1</td>
                                 <td>Novel</td>
-                                <td>Pilihan ganda</td>
+                                <td class="jenis">Essai</td>
                                 <td>10-10-2001</td>
                                 <td>
                                     <button>Lihat jawaban</button>
@@ -84,7 +84,7 @@
                 <div class="content-body-content-materi-header">
                     <h1>Data materi siswa</h1>
                     <div class="content-body-content-materi-header-button">
-                        <button>Tambah materu</button>
+                        <button>Tambah materi</button>
                     </div>
                 </div>
                 <div class="content-body-content-materi-body">
@@ -173,6 +173,13 @@
                     <div class="modal-create-materi-content-footer"></div>
                 </div>
             </div>
+        <div class="modal-add-essai">
+            <div class="modal-add-essay-content">
+                <div class="modal-add-essay-content-header"></div>
+                <div class="modal-add-essay-content-body"></div>
+                <div class="modal-add-essay-content-footer"></div>
+            </div>
+        </div>      
         </div>
     </div>
     <div class="content-footer"></div>
